# pangu-creator

./: .gitignore  README.md  README_EN.md  README_ES.md  README_JA.md  README_KO.md  SKILL.md
references/: quality-checklist.md  special-scenarios.md
references/examples/: distillation-example.md  transcendence-example.md
references/templates/: README.md  content-plus-template.md  content-skill-template.md  idea-plus-template.md  idea-skill-template.md  person-plus-template.md  person-skill-template.md  phenomenon-plus-template.md  phenomenon-skill-template.md
scripts/: .coverage  .gitignore  __init__.py  cli.py  config.py  pyproject.toml  run.py  shared.py
scripts/crawl/: __init__.py  base.py  bing.py  cleaner.py  duckduckgo.py  fetcher.py
scripts/search/: __init__.py  agent_tools.py  collector.py  fallback.py  models.py  multi_agent.py  pipeline.py
scripts/tests/: test_exception_handling.py  test_function_splitting.py  test_logging.py
scripts/transcribe/: __init__.py  whisper.py  youtube.py
