[project]
name = "pangu-creator"
version = "0.1.0"
description = "盘古造物信息采集工具"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "html2text>=2020.1.16",
]

[project.optional-dependencies]
youtube = [
    "yt-dlp>=2023.0.0",
]
whisper = [
    "openai-whisper>=20231117",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
